--- a/Proyecto/html/carta.html
+++ b/Proyecto/html/carta.html
@@ -10,9 +10,20 @@
     <header>
 
     </header>
+
+    <nav>
+        <ul class="navegacion">
+            <li>Inicio</li>
+            <li>Carta</li>
+            <li>Galeria</li>
+            <li>ubicación</li>
+        </ul>
+    </nav>
+
     <main>
 
     </main>
+    
     <footer>
         
     </footer>
