--- a/Proyecto/html/carta.html
+++ b/Proyecto/html/carta.html
@@ -7,11 +7,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Quicksand:wght@300..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
     <header>
         <img class="logo" src="..//img/logo2-02.png" alt="logo">
+        <button class="menuDesplegable">&#9776;</button>
         <nav id="menu">
             <ul class="navegacion">
                 <div></div>
@@ -31,7 +33,8 @@
     </main>
     
     <footer>
-        
+        <p class="textoSuperior">Musubi</p>
+        <p class="textoInferior">Donde la tradición se une con la frescura para crear una experiencia inolvidable en cada plato</p>
     </footer>
 </body>
 </html>
