--- a/Proyecto/html/carta.html
+++ b/Proyecto/html/carta.html
@@ -16,20 +16,19 @@
         <button class="menuDesplegable">&#9776;</button>
         <nav id="menu">
             <ul class="navegacion">
-                <div></div>
                 <li><a href="..//html/index.html" class="animacion">Inicio</a></li>
                 <li><a href="..//html/carta.html" class="animacion">Carta</a></li>
                 <li><a href="..//html/galeria.html" class="animacion">Galeria</a></li>
                 <li><a href="..//html/reservas.html" class="animacion">Reservas</a></li>
-                <div></div>
             </ul>
         </nav>
     </header>
 
-
-
     <main>
-
+        <div class="carta">
+            <img class="imagenes" src="..//img/cerrar-gente-comiendo-palillos.jpg" alt="gente-comiendo">
+            <p>Miso Ramen</p>
+        </div>
     </main>
     
     <footer>
