--- a/Proyecto/html/carta.html
+++ b/Proyecto/html/carta.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="..//css/carta.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Quicksand:wght@300..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Quicksand:wght@300..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
     <title>Document</title>
 </head>
+
 <body>
     <header>
         <img class="logo" src="..//img/logo2-02.png" alt="logo">
         <button class="menuDesplegable">&#9776;</button>
-        <nav id="menu">
+        <nav class="menu">
             <ul class="navegacion">
                 <li><a href="..//html/index.html" class="animacion">Inicio</a></li>
                 <li><a href="..//html/carta.html" class="animacion">Carta</a></li>
@@ -26,14 +30,48 @@
 
     <main>
         <div class="carta">
-            <img class="imagenes" src="..//img/cerrar-gente-comiendo-palillos.jpg" alt="gente-comiendo">
-            <p>Miso Ramen</p>
+            <h2 class="titulo">Entrantes</h2>
+            <div class="carta-img">
+                <p class="nombre-plato">Ensalada Algas del Mar Japonés</p>
+                <img class="imagenes" src="..//img/img-carta/algas-deliciosas-alto-angulo-comer.jpg" alt="ensalada-de-algas">
+                <p class="descripcion">Ensalada de Algas del Mar Japonés. Cada bocado es una explosión de frescura marina y sabores equilibrados. Crujiente de hojas de nori, wakame y umami del kombu. Aderezada con un toque de vinagre de arroz y sésamo tostado.</p>
+
+                <p class="nombre-plato">Gyozas de Pollo al Vapor</p>
+                <img class="imagenes" src="..//img/img-carta/composicion-albondigas-japonesas-alto-angulo.jpg" alt="gyozas">
+                <p class="descripcion">Déjate seducir por nuestras Gyozas Japonesas de Pollo al Vapor. una delicia culinaria que combina la delicadeza de la masa de dumpling con un relleno jugoso de pollo sazonado con jengibre fresco y cebolleta, acompañada con nuestra salsa de sésamo casera.</p>
+            </div>
+
+            <h2 class="titulo">Ramen</h2>
+            <div class="carta-img">
+                <p class="nombre-plato">Ramen Sabor Puro</p>
+                <img class="imagenes" src="..//img/img-carta/fideos-ramen-gourmet-tazon-amarillo-generado-ia.jpg" alt="ramen1">
+                <p class="descripcion">Deléitate con nuestro Ramen Japonés de Sabor Puro, una experiencia gastronómica que celebra la simplicidad y la excelencia de los ingredientes básicos. Caldo cocido durante horas para extraer cada matiz de sabor, los fideos perfectamente al dente con huevo escalfado y cebollino. </p>
+
+                <p class="nombre-plato">Ramen de Caldo Suntuoso</p>
+                <img class="imagenes" src="..//img/img-carta/comida-gourmet-asiatica-saludable-fideos-ramen-generada-ia.jpg" alt="ramen2">
+                <p class="descripcion">Disfruta de nuestro exclusivo Ramen Japonés de Caldo Suntuoso, donde cada ingrediente se combina armoniosamente para crear una experiencia culinaria inolvidable. Caldo cocinado a fuego lento, fideos, huevo escalfado, cebollino y la zanahoria en juliana agregan un toque de color y frescura, mientras que el chashu, marinado en una salsa dulce y ligeramente picante, completa este plato.</p>
+            </div>
+
+            <h2 class="titulo">Sushi</h2>
+            <div class="carta-img">
+                <p class="nombre-plato">Sushi Vegano</p>
+                <img class="imagenes" src="..//img/img-carta/fresquedad-culturas-plato-sushi-maki-generado-ia.jpg" alt="sushi1">
+                <p class="descripcion">Irresistible creación vegan-friendly, el Sushi de Aguacate, donde la simplicidad se combina con el sabor en una experiencia incomparable. Cada bocado es un homenaje a la frescura y la textura sedosa del aguacate, envuelto en arroz de sushi sazonado con vinagre de arroz y envuelto en alga nori.</p>
+
+                <p class="nombre-plato">Sushi de Salmón</p>
+                <img class="imagenes" src="..//img/img-carta/plato-sushi-gourmet-variedades-mariscos-frescos-generados-ia.jpg" alt="sushi2">
+                <p class="descripcion">Deléitate con nuestra creación estrella: el Sushi de Salmón y Aguacate. Cada bocado presenta la suavidad del aguacate en armonía con la jugosidad del salmón fresco, envueltos en una capa de arroz de sushi perfectamente sazonado. Coronado con brillantes huevas que estallan en sabor, este plato eleva la experiencia culinaria a nuevas alturas. Aunque opulento en su presentación.</p>
+            </div>
         </div>
     </main>
-    
+
     <footer>
         <p class="textoSuperior">Musubi</p>
         <p class="textoInferior">Donde la tradición se une con la frescura para crear una experiencia inolvidable en cada plato</p>
     </footer>
+
 </body>
+
+
+
 </html>
