Actualizacion carta y galería

--- a/Proyecto/html/galeria.html
+++ b/Proyecto/html/galeria.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="..//css/carta.css">
+    <link rel="stylesheet" href="..//css/galeria.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
@@ -12,20 +12,26 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="..//img/logo2-02.png" alt="logo">
+        <img class="logo" src="..//img/background-logo/logo2-02.png" alt="logo">
         <button class="menuDesplegable">&#9776;</button>
         <nav id="menu">
             <ul class="navegacion">
                 <li><a href="..//html/index.html" class="animacion">Inicio</a></li>
                 <li><a href="..//html/carta.html" class="animacion">Carta</a></li>
-                <li><a href="..//html/galeria.html" class="animacion">Galeria</a></li>
+                <li><a href="..//html/galeria.html" class="animacion">Galería</a></li>
                 <li><a href="..//html/reservas.html" class="animacion">Reservas</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <img src="..//img/cerrar-gente-comiendo-palillos.jpg" alt="gente-comiento">
+        <h2 class="titulo">Galería</h2>
+        <div class="galeria">
+            <img class="foto" src="..//img/galeria/gente-comiendo1.jpg" alt="gente-comiento">
+            <img class="foto" src="..//img/galeria/gente-comiendo2.jpg" alt="gente-comiendo">
+            <img class="foto" src="..//img/galeria/chef1.jpg" alt="chef">
+            <img class="foto" src="..//img/galeria/chef2.jpg" alt="chef">
+        </div>
     </main>
     
     <footer>
