--- a/reservas.html
+++ b/reservas.html
@@ -100,7 +100,7 @@
                             </div>
                             <div class="caja">
                                 <span>Tarjetas permitidas:</span>
-                                <img src="../img/tarjetas.png" alt="imagen de tarjetas permitidas">
+                                <img src="../img/reservas-img/tarjetas.png" alt="imagen de tarjetas permitidas">
                             </div>
                             <div class="caja">
                                 <label>Nombre de la tarjeta:</label>
