--- a/galeria.html
+++ b/galeria.html
@@ -16,10 +16,10 @@
         <button class="menuDesplegable">&#9776;</button>
         <nav id="menu">
             <ul class="navegacion">
-                <li><a href="..//html/index.html" class="animacion">Inicio</a></li>
-                <li><a href="..//html/carta.html" class="animacion">Carta</a></li>
-                <li><a href="..//html/galeria.html" class="animacion">Galería</a></li>
-                <li><a href="..//html/reservas.html" class="animacion">Reservas</a></li>
+                <li><a href="..//index.html" class="animacion">Inicio</a></li>
+                <li><a href="..//carta.html" class="animacion">Carta</a></li>
+                <li><a href="..//galeria.html" class="animacion">Galería</a></li>
+                <li><a href="..//reservas.html" class="animacion">Reservas</a></li>
             </ul>
         </nav>
     </header>
