--- a/galeria.html
+++ b/galeria.html
@@ -12,14 +12,14 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="..//img/background-logo/logo2-02.png" alt="logo">
+        <img class="logo" src="./img/background-logo/logo2-02.png" alt="logo">
         <button class="menuDesplegable">&#9776;</button>
         <nav id="menu">
             <ul class="navegacion">
-                <li><a href="..//index.html" class="animacion">Inicio</a></li>
-                <li><a href="..//carta.html" class="animacion">Carta</a></li>
-                <li><a href="..//galeria.html" class="animacion">Galería</a></li>
-                <li><a href="..//reservas.html" class="animacion">Reservas</a></li>
+                <li><a href="./index.html" class="animacion">Inicio</a></li>
+                <li><a href="./carta.html" class="animacion">Carta</a></li>
+                <li><a href="./galeria.html" class="animacion">Galería</a></li>
+                <li><a href="./reservas.html" class="animacion">Reservas</a></li>
             </ul>
         </nav>
     </header>
@@ -27,10 +27,10 @@
     <main>
         <h2 class="titulo">Galería</h2>
         <div class="galeria">
-            <img class="foto" src="..//img/galeria/gente-comiendo1.jpg" alt="gente-comiento">
-            <img class="foto" src="..//img/galeria/gente-comiendo2.jpg" alt="gente-comiendo">
-            <img class="foto" src="..//img/galeria/chef1.jpg" alt="chef">
-            <img class="foto" src="..//img/galeria/chef2.jpg" alt="chef">
+            <img class="foto" src="./img/galeria/gente-comiendo1.jpg" alt="gente-comiento">
+            <img class="foto" src="./img/galeria/gente-comiendo2.jpg" alt="gente-comiendo">
+            <img class="foto" src="./img/galeria/chef1.jpg" alt="chef">
+            <img class="foto" src="./img/galeria/chef2.jpg" alt="chef">
         </div>
     </main>
     
