--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="..//img/background-logo/logo2-02.png" alt="logo">
+        <img class="logo" src="./img/background-logo/logo2-02.png" alt="logo">
         <button class="menuDesplegable">&#9776;</button>
         <nav class="menu">
             <ul class="navegacion">
-                <li><a href="..//index.html" class="animacion">Inicio</a></li>
-                <li><a href="..//carta.html" class="animacion">Carta</a></li>
-                <li><a href="..//galeria.html" class="animacion">Galería</a></li>
-                <li><a href="..//reservas.html" class="animacion">Reservas</a></li>
+                <li><a href="./index.html" class="animacion">Inicio</a></li>
+                <li><a href="./carta.html" class="animacion">Carta</a></li>
+                <li><a href="./galeria.html" class="animacion">Galería</a></li>
+                <li><a href="./reservas.html" class="animacion">Reservas</a></li>
             </ul>
         </nav>
     </header>
